@@ -1,5 +1,6 @@
 2011-05-21  6.7.0-0 Cristy  <quetzlzacatenango@image...>
   * Avoid fault on corrupt JPEG images.
+  * Fix -fx to interpret scientfic notation properly.
 
 2011-05-20  6.6.9-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.9-10.
